# ai-effect-wp3

use-cases/delft_node/: blueprint.json  docker-compose-all.yml  dockerinfo.json  requirements.txt  run_workflow.sh  test_pipeline.py
use-cases/delft_node/benchmarking/: Dockerfile  README.md  benchmark_cli.py  blueprint.json  docker-compose-all.yml  dockerinfo.json  main.py  pyproject.toml  requirements.txt  run_workflow.sh
use-cases/delft_node/benchmarking/algorithms/: algorithm_template.py  greedy_baseline.py
use-cases/delft_node/benchmarking/common/: __init__.py  benchmark_operations.py  control_interface.py  proto_runtime.py  task_manager.py
use-cases/delft_node/benchmarking/scripts/: local_test_greedy.py  start.sh
use-cases/delft_node/benchmarking/tests/unit/: test_benchmark_operations.py
use-cases/delft_node/common/: __init__.py  control_interface.py  task_manager.py
use-cases/delft_node/data_synthesizer/: Dockerfile  blueprint.json  docker-compose-all.yml  dockerinfo.json  main.py  requirements.txt  run_workflow.sh
use-cases/delft_node/data_synthesizer/common/: __init__.py  synth_operations.py
use-cases/delft_node/data_synthesizer/scripts/: stop.sh
use-cases/delft_node/shared/proto/: benchmarking.proto  common.proto  data_synthesizer.proto
